--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -12,6 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="Buy 14095 beers for Friday"
         android:layout_toLeftOf="@+id/imageButton"
         android:id="@+id/textView" />
