--- a/app/src/main/res/layout/view_color_selector.xml
+++ b/app/src/main/res/layout/view_color_selector.xml
@@ -6,7 +6,8 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:id="@+id/radioGroup"
-        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top">
 
      </RadioGroup>
