--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textSize="20sp"
         android:text="Buy 14095 beers for Friday"
         android:layout_toLeftOf="@+id/imageButton"
         android:id="@+id/textView" />
